[package]
name = "json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
futures = "0.3.29"
r2r = "0.7.5"
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.108"
yaml-rust = "0.4.4"
